Fix css bug on mobile

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -116,6 +116,8 @@ body {
   display: flex;
   min-width: 320px;
   height: 100vh;
+  height: -webkit-fill-available;
+  height: fill-available;
 }
 .home-page {
   @include center();
